log
Sun Mar 13 16:37:48 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b7badc9
Sun Mar 13 16:42:23 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:42:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   *suma = sumaN(*(a+m), n);
                 ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
exercises.c:40:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i;
       ^
cc1: all warnings being treated as errors
Compilation failed
ef58d0f
Sun Mar 13 19:01:22 UTC 2022: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   *suma = sumaN(*(a+m), n);
                 ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
fbc320f
Sun Mar 13 19:02:47 UTC 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4f2e414
